(JS) search selection shortcut 1.6: make valid url detection much smarter. make search engine matching much smarter. big update, add new pref for setting "custom matches," so you can use searchfox from about:config for example. see the readme for specifics, it's too much to explain in a comment. (CSS) finally clean up urlbar icon positions. (ext) add a search engine for bugzilla; it's awaiting approval on AMO, but the unsigned version can still be installed.

--- a/resources/in-content/system.css
+++ b/resources/in-content/system.css
@@ -447,6 +447,10 @@
         fill: currentColor !important;
     }
 
+    #handlersView {
+        word-wrap: anywhere;
+    }
+
     @-moz-document regexp("^about:blocked.*") {
         html:root,
         html:root * {
