--- a/uc-panels.css
+++ b/uc-panels.css
@@ -108,7 +108,7 @@ this connects with .panel-subview-body rules in userChrome.au.css */
 }
 
 #identity-popup[type="arrow"][side="top"][connection="chrome"] {
-    margin-inline: -44px !important;
+    margin-inline: -46px !important;
 }
 
 #customizationui-widget-panel[viewId="PanelUI-profiler"][type="arrow"][side="top"] {
